# wxTranslator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Info.plist  README.md  aboutdialog.cpp  aboutdialog.h  app.icns  appsettings.cpp  appsettings.h  definitions.h  iconpool.h  jbconversion.hpp  jbtypes.h  json.hpp  logo.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mobuilder.cpp  mobuilder.h  preferencesdialog.cpp  preferencesdialog.h  resource.rc  scanner.cpp  scanner.h  translationdialog.cpp  translationdialog.h  translationfile.cpp  translationfile.h  wxTranslate_DE.wxtrans  wxTranslate_Mac_DE.wxtrans
How to build wxWidgets/: Build on Windows.md  Build on macOS.md  pacman_clangarm64_development.sh  pacman_ucrt64_development.sh
